# ChangeLog for dev-util/buildbot-slave
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/buildbot-slave/ChangeLog,v 1.54 2014/01/20 01:32:36 jer Exp $

  20 Jan 2014; Jeroen Roovers <jer@gentoo.org> buildbot-slave-0.8.8-r1.ebuild:
  Stable for HPPA (bug #487736).

*buildbot-slave-0.8.8-r1 (22 Dec 2013)

  22 Dec 2013; Pacho Ramos <pacho@gentoo.org> +buildbot-slave-0.8.8-r1.ebuild,
  +files/buildslave.service:
  Add unit file (#491038)

  21 Sep 2013; Markos Chandras <hwoarang@gentoo.org>
  -buildbot-slave-0.8.7.ebuild:
  remove old

*buildbot-slave-9999 (11 Sep 2013)

  11 Sep 2013; Markos Chandras <hwoarang@gentoo.org>
  +buildbot-slave-9999.ebuild:
  Add buildbot-slave live ebuild thanks to Alice Ferrazzi
  <alice.ferrazzi@gmail.com>. Bug #484336

*buildbot-slave-0.8.8 (30 Aug 2013)

  30 Aug 2013; Markos Chandras <hwoarang@gentoo.org>
  +buildbot-slave-0.8.8.ebuild:
  Version bump

  03 Aug 2013; Michał Górny <mgorny@gentoo.org> buildbot-slave-0.8.7.ebuild,
  buildbot-slave-0.8.7_p1.ebuild:
  Move dev-python/twisted to dev-python/twisted-core.

  20 May 2013; Agostino Sarubbo <ago@gentoo.org> buildbot-slave-0.8.7_p1.ebuild:
  Stable for s390, wrt bug #468148

  14 May 2013; Agostino Sarubbo <ago@gentoo.org> buildbot-slave-0.8.7_p1.ebuild:
  Stable for x86, wrt bug #468148

  08 May 2013; Agostino Sarubbo <ago@gentoo.org> buildbot-slave-0.8.7_p1.ebuild:
  Stable for sh, wrt bug #468148

  07 May 2013; Agostino Sarubbo <ago@gentoo.org> buildbot-slave-0.8.7_p1.ebuild:
  Stable for ppc64, wrt bug #468148

  07 May 2013; Agostino Sarubbo <ago@gentoo.org> buildbot-slave-0.8.7_p1.ebuild:
  Stable for sparc, wrt bug #468148

  07 May 2013; Agostino Sarubbo <ago@gentoo.org> buildbot-slave-0.8.7_p1.ebuild:
  Stable for ia64, wrt bug #468148

  05 May 2013; Agostino Sarubbo <ago@gentoo.org> buildbot-slave-0.8.7_p1.ebuild:
  Stable for alpha, wrt bug #468148
