@@ -7,15 +7,15 @@ AUX buildslave.service 267 SHA256 a58459949d6eee6f75afc699ce6f1b480225a87e412d33
 DIST buildbot-slave-0.8.7p1.tar.gz 104575 SHA256 bbdb07a3847efa186f942142a09394b467d7375745c49da0a42e9aa5b206eadc SHA512 ee9a119461915716167a258d9c022956e239e21ed524c2ae148b6682dd1410b5d918723e8e51002bc1fc27f67cb59da15cb2293e4939ee5ba08d1e5e067e11fe WHIRLPOOL c523849db5cb743f3b4d93f33305a46682710afcf66fdda3ab807dd412171c5e40e1089849b0f3c901dd75525fe97995a791bf9c15f01f47fdb18d0456b17de3
 DIST buildbot-slave-0.8.8.tar.gz 107470 SHA256 8b7532d4d34527aea41e353d1bc3c35291ec335d3224c27800d2cc0cfc9837cc SHA512 1a5b02298696016a8743bc81e7e899a8bc11a09481f6c911cf4d3e016d111d707ca393d102635c4841d5f2ec5f3a0c9413dc0768170415a59c7523a3bc680fd1 WHIRLPOOL 6c387dbe61c2c3223312e3456afa07bcaab345e69667b9aabd600d8abdf93df955d592283dee423eee40596ee90133688c6c0f26f73fe9e4c8d5cced205c0f24
 EBUILD buildbot-slave-0.8.7_p1.ebuild 1841 SHA256 faa4389a58b59cd8096d381de20a428ed4594520e74ced614ec9c41ff0bf646b SHA512 5bb99bfaf6a676f76887dc3c03d4e2020be64553b6cca10e3f50cbc5f00c0483454530060c6757346e496e8dd6a6cca076e7f3af719da6bc2da05aada5860745 WHIRLPOOL 9859f857e2ff1fcfaee1df9b37ea0f10ce71adcf151dc67f7c6575ddc0660fe674bf71a41aa66a58976979ada43a90674a924fe77435e647d81dfb83cc41a8db
-EBUILD buildbot-slave-0.8.8-r1.ebuild 1904 SHA256 2fb4f3a22764e3c4ae1a4598f1c441b5d1e8a188044c08dc87ba404dd2fbda6e SHA512 133a5392773bca06cb87e0fe62425088a88405bfdd0362081bee84b5e51cf31c1fbb67ea94cec2e4c098881af5c38d163f5139c2217ac57095a04a56c259e20b WHIRLPOOL 2e423098061acbeaddeb6b374a0921029601dfdaba6c4c0649ead9a38aba25634d8e254ae965cb6af76f64a747e1ad84a5c0dd43946abf81fe3712abf371b968
+EBUILD buildbot-slave-0.8.8-r1.ebuild 1906 SHA256 86051b71a6439f055b8e56a1924bb59d8df26e4788fdc9e8aeceef34e47a040f SHA512 5b0dc904540646b284c291aaff6b05be8bbee2b568dc1721a40bcc14a21ff7e24e7290fc908f753833563384ec3c02b16e27b18ec86b4d61b4e666599d041b77 WHIRLPOOL b1c1cdd4bfcf86978abec7d9eeb6421fc5833d992f641dc31b8d8eaee0d631f31db054c0c5a99b3ac579b1c593768a68a40eb394045ab1e2f8e4cd2bae540c05
 EBUILD buildbot-slave-0.8.8.ebuild 1850 SHA256 791263a8cf38d15db89c402503cc9d422b1cd344dd9a13223ae330fa2eb8daff SHA512 5b2ad6bd6384404578679c96a3b2df18b6c99c86657ba9272df9e448819e5ba42f371317afef7e1bc83b04a8cb19beffe8e99a9e303cf7565048e4b756aa62b4 WHIRLPOOL 36fd8065cdafe6dc1c32fbb360bf1c90e62b93ac402e34c21c633b7951d544194e2e2224c601a5b07b742527907cef74dd687d4eb970f8d6599ecd8f4e75d7e7
 EBUILD buildbot-slave-9999.ebuild 2156 SHA256 230a3c21d95d956591f72c9c89eba060f7f37483c65a38bc169cdeba1a914489 SHA512 1187ff3970b78d306a25d86c403323862c8a88c775b477ac8904fa931ec1d375c07d00f3d05bd42e60e0b8a5ce1e5d42c3fb68b835a03d796966d058b76e9c4e WHIRLPOOL ab956c6730a2209146305b289bcbdb557b8009db2a15c65253a097fbfa56afc61efb5948b5b4f8c317136ae41014bcca5d1f808886250cc39f1a0a186354f3e1
-MISC ChangeLog 7331 SHA256 78be9f46c33f87ee0b77d9cc05b5111d50db6ffef4e78e2110fb7d89f46ba023 SHA512 1d462eb60513156b2c45a204e23c044b8926d89b9c793e56252240c363d25ddb8c1042385260b32614c89e0c8639206905d333e8155d1591233a5321c16c3b7a WHIRLPOOL e7fdd61b44208f938339c567118e8ed5adb037f1113690e5689858106b15b04f727a443c75f688b3f9af71e0051505497ed49f490d4eb0c608b04448c5a889bf
+MISC ChangeLog 7441 SHA256 a22d441b386e8c01a5db0e321b9b95b911a366fdc2f4752dbcadce7d7b849dc2 SHA512 89e331e1a749e75f21f1c430a1fd8ffec0b9018a54fdf61cf022596240e9cc226a7fa65f594edf43e5e763b758863ae23fb138184f6c5a91f9ea1a16280e040f WHIRLPOOL fb08319c73dc144ebf7068d77a381950eac3afb303636de376f7ccb724e7f54180f54032a80579e588f1470a63f4b0af0586f36bdeb6a15c8855d53019032866
 MISC metadata.xml 334 SHA256 c16b48529b158cd93ef72456bf35a1b51617ab6a8210f4ba4a034ffd26cdc7a0 SHA512 23d3a3a3d00fca47e2eca7716e93a5ed59ea7eb0a8ab9c83ad99eadcea3b631f56e49b08b7e363be0039fa7fce13a4a49122998c6c8436c9d0632a5e496b3d12 WHIRLPOOL 5fe6808a39fbc26a8cc94b7ef355a1bb08280c32ffbc45e0baf8efd2ee77a1ece0f0d0b75a024abd569987af64fa20a966c62d13350ffeda9eae1d5bc25c7188
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlLcfLYACgkQVWmRsqeSphPF/gCeJeAGCZxmGGVAydrMSd4pZVSq
-Y8EAn3MfY7u02qL3oQV9RyA1m6vMetjA
-=S8m+
+iEYEAREIAAYFAlLe4MAACgkQkKaRLQcq0GLc4QCgj4wnlTMxYeUKYq28yiC2vV5k
+LUgAnR3LC7dzeTPAr5JboeaUhY3cuUe4
+=yjxk
 -----END PGP SIGNATURE-----
