@@ -7,26 +7,14 @@ AUX buildmaster.initd 1185 SHA256 ac3b4aeb9fc1447a53150f66d58baf3258d607577e7d34
 DIST buildbot-0.8.7p1.tar.gz 4597202 SHA256 8dee3f887bce55a7f7cf01e6c421a2511898c2f89f55f202f5193a100a9a5776 SHA512 60d5fc6b65ef3fa4a63b1aed8e7ec352c40e13ef90bd55ef1ea580e1bc6beefea856f245ff33b15cd401db747e5e9c3ea36b37d72e5ca611e492e0ae2050ac4f WHIRLPOOL bb7872017634f3daf3569225e3b9e5c6d5b3c039cfef0b31b8b3b8eabbd1b2484d7956f3840306775a991bc41cfece2190f2c65097453c8322cd2cd9f3d50def
 DIST buildbot-0.8.8.tar.gz 4641582 SHA256 5013e3f3d83d2fcac8b5c391e3a740597330015300f0ebb94005ed2f90d739d0 SHA512 bd6f9a7a8bdf53a3f7012af7ec4aa2f1f40479496ca1e95dc1b9e0524dbf3bfcd0fbe09a94f8e68b0fd8018949c841d8b3f6ecc306b388e4b917ad21597d9168 WHIRLPOOL 8eb462502a98c87663eb90c9f6e280bd8c19161ef965424a8a12fe8dbbb481d52cd37bfaa33d6ae874c62fc017cc60d4b83c4f01fdbb2508d0533ec88c1c7f7a
 EBUILD buildbot-0.8.7_p1-r1.ebuild 3505 SHA256 8d85bb13fe146db9ec5365a20a2507e6c78c811492674b09a50c6a637e398210 SHA512 70264e79155fb92bf176a7411d42770940e540bd55cbbb92b28ce5dc343b47b88795a86646453914caccc44b4a1b7020fbc00820870c1bd395071627368a0b80 WHIRLPOOL 6ec3bf8e7df9d20004bc548977d769681c3f6ad7d930422569b9c82953c1c1633a0e33a6e0368184908882d2e82930cddc0367e0cbe6c2e8f3a6d525346dd5f6
-EBUILD buildbot-0.8.8-r2.ebuild 3592 SHA256 9d67618785e06b3fe1efc849c19ce73c1861e5e945fa5c0632d97e8d4881be87 SHA512 abe2cabdaf6ec71c14f10d57238f1d261dc4ed7cae39d5c90b245b5d40a87a4a14e8fe753f0d11cead2cc007e094c905f0456d75d9e5c4b16ba26dec8d13bd86 WHIRLPOOL 4c80753b514e9f5121cf9d031cc74cbc156126e27780326e3ccaff5be100859656c4040cfd89ae43893e8e0e58db7ccfcc8b23b687d86f33846e5050f5b99dd1
+EBUILD buildbot-0.8.8-r2.ebuild 3589 SHA256 91137630dbde392d0dc2439a2a0a7d9fe77575216d53138d0d09fc9c6f1547b6 SHA512 d834c165accdf42e287e6478549869bdb853f74d1a830dbe045bc5734fa8c4cafa59653f62a08227134fdfeaf1073da83b264024f605e22ea4fb449df594359b WHIRLPOOL cadbb0c974cb45071d312b23b806acb2447595b6a18a830be8c98f392bc5775682289a0a8d78ecc35153c5cd99159dc0b6004aa727afdbf7117e79a565261ae5
 EBUILD buildbot-9999.ebuild 3854 SHA256 e00621d955ce632393ee686a600cccd57e6a8d5c7e3e1308ad380c01faf5a3c0 SHA512 001ec77694c08be80843c342749c5b905ad2133c3437b174f440aa81a7c9bc4615dd92cfb17ad900e179f1e8065ef3ae2a5e2d8def422007399065369d0ed7f5 WHIRLPOOL 647101ab474813d72fc0fdb62d44c76e8da1cd7ff2e8d0475fef17b48198f7303345edb44d8c951ba7ec56b7aa5e640e3fd6b12ea4456469612844912c805b9b
-MISC ChangeLog 19759 SHA256 73389d9c8d7b67ec413addfc567003fada294df015fd51f27171dbae3f0636c7 SHA512 5b2f469f108b578a3a07ef5b74dbfd8d817b8cacedff2a39d1d381f03952df204a06ff0538687704d48fb1ac41441ac255302b8ebc0ffbc11ecc2409d1cf30cc WHIRLPOOL 8fc6f19d3f85e6246e1779b6fbcad6356f2df57bcd88dc6e1b2db0037f6d963627a5545e399a4145e2660ef4fa73f5508c8643f89367dea59e601bb04ea7d2c3
+MISC ChangeLog 19858 SHA256 5b3249c5e3354884c653b5643a9bef28ec6fd5356c60396ba8974126166ad939 SHA512 61ff6fd0cc0bc3b7a7f2be1bb07312083d64837689b4726392fa34a5367fc2b5179f9ba5cc1b065486efe086b2e02d0de773d51b0ad59b9fa795519631e490a6 WHIRLPOOL 01e96c4165ccb78a16fa60a663a07e76720a02d85d9ab2572f3525cc300987547cf604dced7e7ff3368e846682e847b687f144c22de38636dc760143f736e942
 MISC metadata.xml 1439 SHA256 6d6255c1a762a49949170dd854a9f43cf9003e98e00af1344670be0de277f31d SHA512 30ebc4871ecd80c5090687d2e2e8daa75f087e3839c561c6a78d53f90501add995674d3fa577ec4efa1d677552e3e3321a78777b6dca0e96c708ec76634afd89 WHIRLPOOL a7f496ee4120a619e1fe1eb59a1a42c2848a4c4595751ae50b26a2fc3560f23f48c4e27057307b89d7cdb88870561f853f9f8031b55e7a73ce86d1de180c9c3f
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQJ8BAEBCABmBQJS3trAXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQzNTVDNDczOUYzRjJEMTRGNDRGMzU2RkMw
-OUJGNEY1NEMyQkE3RjNDAAoJEAm/T1TCun88KrQP/A4SZj/O4Cs7nGGURTjyY94q
-RxKFQYjtWIXY4djaO0Ml4uBJwr6J+ktcgeo/4D9w2AtnLGQIfA8veUotlGgagTnN
-BRemD43rdzHqO0xCT+pii8zNtAwRCjgHKDTyzJsAPpRcqarbdM5j4rqK6+NHt2/u
-S7aW4NHtFV+SA16Jqkga114vM08rbI8ZN9sgPRZrgzoiQrr7v9O5IU6vyf2kEMyS
-fK8UGAagk/xoc0b3PnP7NKlkTrOT3hmSmNOuJL8XP+9xO5wnCqDy24sC0EGw6/2r
-EYp2ygWatUFEhd65qUQ0uYlNcahhQFY0wNHA8fPNBGVL0wGhBo7/EbCcu7r0E5cD
-DzE5d2xQXXqFF0fAtA6L3nBDMswkTQrEK9ual5Dq/lWIA9G3ICFsNUVqx9Ef24Jy
-D8fQ8mCI8rmRYftzDR1FNU8dsnangrqwLMiMHCNCqaU1qLnVNEW5bmh+TrQ+xw9c
-AnqTSdj9xDRaktGa2KnkBPgWKYwGSaptpNRrgy5gQc1gMu9Pd+n283S6H0c+JGy/
-XzXlBWa9fBJ6PkaBMDRghHPIZHestYU9FLW+KJDvAmq8zgkRmU86FiNNxqDjzt8c
-NAihbQSb1evzm1L7XgPuW+FonbUHZ9xgCGIx+Ta4gI3JQstjyZSGaW52Jcko477o
-xPtqwnaVK4iFDrX4Z5ky
-=+Nww
+iEYEAREIAAYFAlLe4KgACgkQkKaRLQcq0GLcnACgsKeN+TqlNCS7D3SM/lVqSDyC
+rcUAnilx5RDAM3Z+tV9JYHiDUC70zf2v
+=qjy+
 -----END PGP SIGNATURE-----
