@@ -1,6 +1,9 @@
 # ChangeLog for dev-util/buildbot
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/buildbot/ChangeLog,v 1.147 2014/01/21 20:39:04 hwoarang Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/buildbot/ChangeLog,v 1.148 2014/01/21 20:56:27 maekke Exp $
+
+  21 Jan 2014; Markus Meier <maekke@gentoo.org> buildbot-0.8.8-r2.ebuild:
+  arm stable, bug #487736
 
   21 Jan 2014; Markos Chandras <hwoarang@gentoo.org> buildbot-0.8.8-r2.ebuild,
   buildbot-9999.ebuild:
