@@ -1,6 +1,9 @@
 # ChangeLog for dev-util/buildbot-slave
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/buildbot-slave/ChangeLog,v 1.54 2014/01/20 01:32:36 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/buildbot-slave/ChangeLog,v 1.55 2014/01/21 20:56:51 maekke Exp $
+
+  21 Jan 2014; Markus Meier <maekke@gentoo.org> buildbot-slave-0.8.8-r1.ebuild:
+  arm stable, bug #487736
 
   20 Jan 2014; Jeroen Roovers <jer@gentoo.org> buildbot-slave-0.8.8-r1.ebuild:
   Stable for HPPA (bug #487736).
